<resources>
    <string name="app_name">Kakeibo Application</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_user">Create user</string>
    <string name="lucky_cat">Asian Lucky Cat Logo</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="person_name">Full name</string>
    <string name="show_password">Show password</string>
    <string name="dashboard">Dashboard</string>
    <string name="itemsindashboard">3 Items</string>
    <string name="wallet">Virtual Wallet</string>
    <string name="expense">Register Purchase</string>
    <string name="reportcard">Report Card</string>
    <string name="purchase">Add Purchase</string>
    <string name="home">Home</string>
    <string name="main">Return to login</string>
    <string name="purchase_name">Purchase name</string>
    <string name="purchase_date">Purchase date</string>
    <string name="purchase_amount">Purchase amount</string>
    <string name="purchase_category">Select purchase category…</string>
    <string name="add">Add</string>
    <string name="dollar">&#160;$</string>
    <string name="help">help button</string>
    <string name="income">Monthly income</string>
    <string name="expenses">Monthly expenses</string>
    <string name="savings">Savings goal</string>
    <string name="spending">Spending cash</string>
    <string name="wallet_name">Name your wallet</string>
    <string name="saving_for">What are you saving for?&#160;</string>
    <string name="start_date">Start date:&#160;</string>
    <string name="end_date">End date:&#160;</string>
    <string name="update">Update</string>
    <string name="select">Select your wallet</string>
    <string name="generate">Generate report card</string>
    <string name="savings_actual">Savings actual</string>
    <string name="needs">Spent needs</string>
    <string name="wants">Spent wants</string>
    <string name="cultural">Spent cultural</string>
    <string name="unexpected">Spent unexpected</string>
    <string name="drop">Dropdown button</string>
    <string name="goal_achieved">Goal Achieved?</string>
    <string name="wallet_id">Wallet name:</string>
    <string name="improvement">What can you improve?</string>
    <string name="improvement_how">How will you achieve this?</string>
    <string name="step">Next step</string>
    <string name="save">Save report</string>
    <!-- CUSTOM -->
    <string-array name="purchase_category">
        <item>Wants</item>
        <item>Needs</item>
        <item>Cultural</item>
        <item>Unexpected</item>
    </string-array>
    <string-array name="goal_achieved">
        <item>Yes</item>
        <item>No</item>
        <item>Partially</item>
    </string-array>
</resources>