<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/walletName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"

        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/start_date"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/walletStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="end"
            android:paddingTop="5dp"
            android:text="@string/end_date"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/walletEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/income"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="end"
            android:text="@string/dollar"
            android:paddingTop="5dp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/walletIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/expenses"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="end"
            android:text="@string/dollar"
            android:paddingTop="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/walletExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/savings"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="end"
            android:text="@string/dollar"
            android:paddingTop="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/walletSavingsGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/spending"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/dollar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/walletSpendingCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "0"
            android:gravity="start"
            android:paddingTop="5dp"
            android:text="@string/saving_for"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/walletSavingFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="5dp"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>