<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unexpected"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cultural"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <EditText
        android:id="@+id/editTextSpendingUnexpected"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextSpendingCultural"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextSpendingWants"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wants"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationReport"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="675dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/bottomnavigation" />


    <Spinner
        android:id="@+id/spinnerWalletName"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:background="@drawable/spinner_lining"
        android:contentDescription="@string/wallet_name"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:contentDescription="@string/drop"
        android:src="@drawable/ic_drop"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:text="@string/select"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />


    <Button
        android:id="@+id/buttonLoadData"
        android:layout_width="254dp"
        android:layout_height="61dp"
        android:background="@drawable/loginbutton_background"
        android:text="@string/generate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="212dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/editTextNumberSavingsGoal"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_date"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/savings"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColorHint="#455A64"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextNumberSavingsActual"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="5dp"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/savings_actual"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColorHint="#455A64"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savings"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savings_actual"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/needs"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <EditText
        android:id="@+id/editTextSpendingNeeds"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logintext_background"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonNextStep"
        android:layout_width="188dp"
        android:layout_height="65dp"
        android:background="@drawable/loginbutton_background"
        android:text="@string/step"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>